SERVER-16005: Improve startup message around wt sharing violation